* Fixed overflow side effect at date range filter

--- a/src/view/Components/Transaction/Filters/TransactionFilters.scss
+++ b/src/view/Components/Transaction/Filters/TransactionFilters.scss
@@ -6,13 +6,19 @@
 .date-range-filter {
   min-width: 250px;
   max-width: 400px;
-  overflow: hidden;
 
   .filter-item__title {
     display: flex;
     flex-flow: row nowrap;
     column-gap: 1rem;
-    overflow-x: auto;
+    overflow: hidden;
+
+    .filter-item__controls {
+      display: flex;
+      flex-flow: row nowrap;
+      column-gap: 1rem;
+      overflow-x: auto;
+    }
 
     .field-header-btn {
       flex: 0 0 auto;
